feature: default nick_id=user_id, but can't update
